CI: add `.github/workflows/main.yml` for GitHub Actions
Note in a comment that `.travis.yml` is not currently used.

Schedule a cron job to run once per month on GitHub Actions.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+# travis-ci.com is currently not used, and this file may be outdated.
+#
+# GitHub Actions are used: configured via the files in the directory:
+# `.github/workflows/`
 language: python
 python:
   - "3.7"
